# OregonCore

./: CMakeLists.txt
src/game/: AccountMgr.cpp  AddonHandler.cpp  AddonHandler.h  ArenaTeam.cpp  ArenaTeam.h  ArenaTeamHandler.cpp  AuctionHouseBot.cpp  AuctionHouseBot.h  AuctionHouseHandler.cpp  AuctionHouseMgr.cpp  AuctionHouseMgr.h  Bag.cpp  Battleground.cpp  Battleground.h  BattlegroundAA.cpp  BattlegroundAA.h  BattlegroundAB.cpp  BattlegroundAB.h  BattlegroundAV.cpp  BattlegroundAV.h  BattlegroundBE.cpp  BattlegroundBE.h  BattlegroundEY.cpp  BattlegroundEY.h  BattlegroundHandler.cpp  BattlegroundMgr.cpp  BattlegroundMgr.h  BattlegroundNA.cpp  BattlegroundNA.h  BattlegroundRL.cpp  BattlegroundRL.h  BattlegroundWS.cpp  CMakeLists.txt  Cell.h  CellImpl.h  Channel.cpp  Channel.h  ChannelHandler.cpp  ChannelMgr.h  CharacterHandler.cpp  (+230 more)
src/game/AI/: CreatureAIRegistry.cpp  CreatureAIRegistry.h  CreatureAISelector.cpp  CreatureAISelector.h
src/game/Accounts/: AccountMgr.cpp  AccountMgr.h
src/game/Addons/: AddonHandler.cpp  AddonHandler.h
src/game/Arena/: ArenaTeam.cpp  ArenaTeam.h  ArenaTeamHandler.cpp
src/game/AuctionHouse/: AuctionHouseHandler.cpp  AuctionHouseMgr.cpp  AuctionHouseMgr.h
src/game/AuctionHouseBot/: AuctionHouseBot.cpp  AuctionHouseBot.h
src/game/BattleGround/: Battleground.cpp  Battleground.h  BattlegroundAA.cpp  BattlegroundAA.h  BattlegroundAB.cpp  BattlegroundAB.h  BattlegroundAV.cpp  BattlegroundAV.h  BattlegroundBE.cpp  BattlegroundBE.h  BattlegroundEY.cpp  BattlegroundEY.h  BattlegroundHandler.cpp  BattlegroundMgr.cpp  BattlegroundMgr.h  BattlegroundNA.cpp  BattlegroundNA.h  BattlegroundRL.cpp  BattlegroundRL.h  BattlegroundWS.cpp  BattlegroundWS.h
src/game/Chat/: Channel.cpp  Channel.h  ChannelHandler.cpp  ChannelMgr.h  CharacterHandler.cpp  Chat.cpp  Chat.h  ChatHandler.cpp
src/game/Cinematics/: CinematicMgr.cpp  CinematicMgr.h  M2Stores.cpp  M2Stores.h  M2Structure.h
src/game/Combat/: CombatAI.cpp  CombatAI.h  CombatHandler.cpp  DuelHandler.cpp  HostileRefManager.cpp  HostileRefManager.h  ThreatManager.cpp  ThreatManager.h
src/game/DBScripts/: ScriptMgr.cpp  ScriptMgr.h
src/game/Entities/: Bag.cpp  Bag.h  Corpse.cpp  Corpse.h  Creature.cpp  Creature.h  CreatureGroups.cpp  CreatureGroups.h  CreatureTextMgr.cpp  CreatureTextMgr.h  DynamicObject.cpp  DynamicObject.h  GameObject.cpp  GameObject.h  GossipDef.cpp  GossipDef.h  Item.cpp  Item.h  ItemEnchantmentMgr.cpp  ItemEnchantmentMgr.h  ItemHandler.cpp  ItemPrototype.h  MiscHandler.cpp  NPCHandler.cpp  NPCHandler.h  Object.cpp  Object.h  ObjectGuid.cpp  ObjectGuid.h  Pet.cpp  Pet.h  PetHandler.cpp  PetitionsHandler.cpp  Player.cpp  Player.h  QueryHandler.cpp  SkillHandler.cpp  StatSystem.cpp  TemporarySummon.cpp  TemporarySummon.h  (+11 more)
src/game/GMTickets/: GMTicketHandler.cpp  GMTicketMgr.cpp  GMTicketMgr.h
src/game/GameEvents/: GameEventMgr.cpp  GameEventMgr.h
src/game/Globals/: Conditions.cpp  Conditions.h  DisableMgr.cpp  DisableMgr.h  ObjectAccessor.cpp  ObjectAccessor.h  ObjectMgr.cpp  ObjectMgr.h  SharedDefines.h
src/game/Grids/: Cell.h  CellImpl.h  GridNotifiers.cpp  GridNotifiers.h  GridNotifiersImpl.h  GridStates.cpp  GridStates.h  ObjectGridLoader.cpp  ObjectGridLoader.h
src/game/Groups/: Group.cpp  Group.h  GroupHandler.cpp  GroupRefManager.h  GroupReference.cpp  GroupReference.h
src/game/Guilds/: Guild.cpp  Guild.h  GuildHandler.cpp
src/game/LFG/: LFGHandler.cpp
src/game/Loot/: LootHandler.cpp  LootMgr.cpp  LootMgr.h
src/game/Mails/: Mail.cpp  Mail.h
src/game/Maps/: GridDefines.h  InstanceData.cpp  InstanceData.h  InstanceSaveMgr.cpp  InstanceSaveMgr.h  Map.cpp  Map.h  MapInstanced.cpp  MapInstanced.h  MapManager.cpp  MapManager.h  MapRefManager.h  MapReference.h  MapUpdater.cpp  MapUpdater.h  Position.cpp  Position.h  TaxiHandler.cpp
src/game/MotionGenerators/: ConfusedMovementGenerator.cpp  ConfusedMovementGenerator.h  FleeingMovementGenerator.cpp  FleeingMovementGenerator.h  FollowerRefManager.h  FollowerReference.cpp  FollowerReference.h  HomeMovementGenerator.cpp  HomeMovementGenerator.h  IdleMovementGenerator.cpp  IdleMovementGenerator.h  MotionMaster.cpp  MotionMaster.h  MoveMap.cpp  MoveMap.h  MoveMapSharedDefines.h  MovementGenerator.cpp  MovementGenerator.h  MovementGeneratorImpl.h  MovementHandler.cpp  Path.h  PathFinder.cpp  PathFinder.h  PointMovementGenerator.cpp  PointMovementGenerator.h  RandomMovementGenerator.cpp  RandomMovementGenerator.h  TargetedMovementGenerator.cpp  TargetedMovementGenerator.h  WaypointManager.cpp  WaypointManager.h  WaypointMovementGenerator.cpp  WaypointMovementGenerator.h
src/game/Movement/: MoveSpline.cpp  MoveSpline.h  MoveSplineFlag.h  MoveSplineInit.cpp  MoveSplineInit.h  MoveSplineInitArgs.h  packet_builder.cpp  packet_builder.h  spline.cpp  spline.h  spline.impl.h  typedefs.h  util.cpp
src/game/OutdoorPvP/: OutdoorPvP.cpp  OutdoorPvP.h  OutdoorPvPEP.cpp  OutdoorPvPEP.h  OutdoorPvPHP.cpp  OutdoorPvPHP.h  OutdoorPvPMgr.cpp  OutdoorPvPMgr.h  OutdoorPvPNA.cpp  OutdoorPvPNA.h  OutdoorPvPSI.cpp  OutdoorPvPSI.h  OutdoorPvPTF.cpp  OutdoorPvPTF.h  OutdoorPvPZM.cpp  OutdoorPvPZM.h
src/game/Pools/: PoolMgr.cpp  PoolMgr.h
src/game/PrecompiledHeaders/: gamePCH.cpp  gamePCH.h
src/game/Quests/: QuestDef.cpp  QuestDef.h  QuestHandler.cpp
src/game/Reputation/: ReputationMgr.cpp  ReputationMgr.h
src/game/Server/: DBCEnums.h  DBCStores.cpp  DBCStores.h  DBCStructure.h  DBCfmt.h  Opcodes.cpp  Opcodes.h  WorldSession.cpp  WorldSession.h  WorldSocket.cpp  WorldSocket.h  WorldSocketMgr.cpp  WorldSocketMgr.h
src/game/Skills/: SkillDiscovery.cpp  SkillDiscovery.h  SkillExtraItems.cpp  SkillExtraItems.h
src/game/Social/: SocialMgr.h  (+1 more)
src/mangosd/: CMakeLists.txt  Console.cpp  Main.cpp  Master.cpp  Master.h  OCSoap.cpp  OCSoap.h  RARunnable.cpp  RARunnable.h  RASocket.cpp  RASocket.h  mangosd.rc  resource.h
src/realmd/: AuthCodes.h  AuthSocket.cpp  AuthSocket.h  BufferedSocket.cpp  BufferedSocket.h  CMakeLists.txt  Console.cpp  Main.cpp  PatchHandler.cpp  PatchHandler.h  RealmList.cpp  RealmList.h  realmd.rc  resource.h
(+1169 files in other folders)
